--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             SafeGeo is your trusted application for secure location-based services and privacy-focused features.
         </p>
         <a class="privacy-btn" href="policy-privacy.html">Privacy Policy</a>
+        <a class="contact-btn" href="contacts.html">Contacts</a>
     </div>
     <script src="theme-switch.js"></script>
 </body>
